[package]
name = "iced_reg_example_app"
version = "0.1.0"
authors = ["Radovan Blažek <blazra@gmail.com>"]
edition = "2021"
publish = false


[dependencies]
iced = { version = "0.8", features = ["glow"]}
iced_aw = { version = "0.4", default-features = false, features = ["wrap"] }
iced_reg = { path = "../" }